--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,12 @@ certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.7
 discord.py==1.7.3
+dnspython==2.1.0
 idna==3.3
+motor==2.5.1
 multidict==5.2.0
 oauthlib==3.1.1
+pymongo==3.12.0
 python-dotenv==0.19.1
 requests==2.26.0
 requests-oauthlib==1.3.0
