--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,16 @@ charset-normalizer==2.0.7
 discord.py==1.7.3
 dnspython==2.1.0
 idna==3.3
+install==1.3.4
 motor==2.5.1
 multidict==5.2.0
 oauthlib==3.1.1
 pymongo==3.12.0
+python-dateutil==2.8.2
 python-dotenv==0.19.1
 requests==2.26.0
 requests-oauthlib==1.3.0
+six==1.16.0
 tweepy==4.1.0
 typing-extensions==3.10.0.2
 urllib3==1.26.7
