--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+aiodns==3.0.0
 aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.2.0
+brotlipy==0.7.0
+cchardet==2.1.7
 certifi==2021.10.8
+cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.7
 discord.py==1.7.3
@@ -10,7 +14,13 @@ idna==3.3
 install==1.3.4
 motor==2.5.1
 multidict==5.2.0
+mysql-connector-python==8.0.26
 oauthlib==3.1.1
+praw==7.4.0
+prawcore==2.3.0
+protobuf==3.18.1
+pycares==4.0.0
+pycparser==2.20
 pymongo==3.12.0
 python-dateutil==2.8.2
 python-dotenv==0.19.1
@@ -19,5 +29,7 @@ requests-oauthlib==1.3.0
 six==1.16.0
 tweepy==4.1.0
 typing-extensions==3.10.0.2
+update-checker==0.18.0
 urllib3==1.26.7
+websocket-client==1.2.1
 yarl==1.7.0
