--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ install==1.3.4
 motor==2.5.1
 multidict==5.2.0
 mysql-connector-python==8.0.26
+nextcord==2.0.0a3
 oauthlib==3.1.1
 praw==7.4.0
 prawcore==2.3.0
@@ -22,6 +23,7 @@ protobuf==3.18.1
 pycares==4.0.0
 pycparser==2.20
 pymongo==3.12.0
+PyNaCl==1.4.0
 python-dateutil==2.8.2
 python-dotenv==0.19.1
 requests==2.26.0
@@ -31,5 +33,4 @@ tweepy==4.1.0
 typing-extensions==3.10.0.2
 update-checker==0.18.0
 urllib3==1.26.7
-websocket-client==1.2.1
-yarl==1.7.0
+websocket-clie
